src/main/antlr4/com/infodesire/poc/antlr4dsl/parser/Expr.g4
grammar Expr;
prog:	expr EOF ;
expr:	expr ('*'|'/') expr
    |	expr ('+'|'-') expr
    |	INT
    |	'(' expr ')'
    ;
NEWLINE         : [\r\n]+ -> skip;
INT             : [0-9]+ ;
WHITESPACE      : [ \t]+ -> skip;
